# kiki

./: CMakeLists.txt  Makefile.bgq  README.md  asm.c  comm.c  comm.h  debug.c  debug.h  demo.c  extern.h  hash.h  hash_chain.c  hash_chain.h  hash_oa.c  hash_oa.h  io.c  io.h  ki.c  ki.h  mem.c  mem.h  rai.c  raiphy.c  raiphy.h  rait.c  search.c  seq.c  seq.h  util.c  util.h
scripts/: fa2tab.pl  tab2fa.pl
test/: short.fa
